@@ -15,6 +15,7 @@ Stable versions
 	  positions getting assigned a non-existent sequence.
 	- Document xmp_set_position/xmp_next_position/xmp_prev_position
 	  interactions with xmp_stop_module/xmp_restart_module.
+	- Fix stack underflow in Pha Packer loader (CVE-2025-47256).
 	Changes by Thomas Neumann:
 	- Fix the pattern loop effect in Astroidea XMF loader.
 	- Fix loading of Extreme Pinball modules.
